# nasy_nautc_bot

./: .gitignore  .pdm.toml  bot.py  pyproject.toml
